sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:3: error: not found: value estTrie
  while (!estTrie) {
          ^