sort.pancake.BasicPancake.scala.code
def solve() {
  while (!estTrie) {
    for (i<-1 to getTaillePile-1) {
      if (getRayonCrepe(i)<getRayonCrepe(i+1)) {
				retourne(i)
      }
    }
  }
}